Add Message Search Functionality (#288)
* Added search message page

* Overhaul search functionality protoype.  Improved performance by not reading the entire topic into memory and having a safetly limit on the number of messages to read befor the search aborts.  Added a maximum results count.  Added a date filter to allow user to specify which timestamp to start searching from.  Added better output.

* Fix bad merge

* Remove redundant class

* Remove redundant file

* Make pom customizable for our needs

* Fix formatting and input a bit

* Update search message page card layout

* Standardize code formatting

* Addressed compilation errors and refactored

Refactored to increase maintainability

* Removed impossible end state REACHED_END_OF_TIMESPAN

---------

Co-authored-by: pedro lastra <pedro.lastra@veepee.com>
Co-authored-by: Nathan Daniels <ndaniels@cardlytics.com>
Co-authored-by: Bert Roos <Bert-R@users.noreply.github.com>
Co-authored-by: Bert Roos <bert@famroos.nu>