@@ -4,16 +4,20 @@ import jakarta.annotation.PostConstruct;
 import kafdrop.config.KafkaConfiguration;
 import kafdrop.model.TopicPartitionVO;
 import kafdrop.model.TopicVO;
+import kafdrop.service.SearchResults.CompletionReason;
 import kafdrop.util.Deserializers;
 import kafdrop.util.MessageDeserializer;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
+import org.apache.kafka.clients.consumer.ConsumerRecords;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
+import org.apache.kafka.clients.consumer.OffsetAndTimestamp;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.common.PartitionInfo;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.serialization.ByteArrayDeserializer;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -24,6 +28,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -34,7 +39,8 @@ import java.util.stream.Collectors;
 @Service
 public final class KafkaHighLevelConsumer {
   private static final int POLL_TIMEOUT_MS = 200;
-
+  private static final int SEARCH_POLL_TIMEOUT_MS = 1000;
+  private static final int SEARCH_MAX_MESSAGES_TO_SCAN = 100000;
   private static final Logger LOG = LoggerFactory.getLogger(KafkaHighLevelConsumer.class);
 
   private KafkaConsumer<byte[], byte[]> kafkaConsumer;
@@ -68,14 +74,14 @@ public final class KafkaHighLevelConsumer {
     Map<TopicVO, List<TopicPartition>> allTopics = topics.stream().map(topicVO -> {
       List<TopicPartition> topicPartitions = topicVO.getPartitions().stream().map(topicPartitionVO ->
         new TopicPartition(topicVO.getName(), topicPartitionVO.getId())
-      ).collect(Collectors.toList());
+      ).toList();
 
       return Pair.of(topicVO, topicPartitions);
     }).collect(Collectors.toMap(Pair::getKey, Pair::getValue));
 
     List<TopicPartition> allTopicPartitions = allTopics.values().stream()
       .flatMap(Collection::stream)
-      .collect(Collectors.toList());
+      .toList();
 
     kafkaConsumer.assign(allTopicPartitions);
     Map<TopicPartition, Long> beginningOffset = kafkaConsumer.beginningOffsets(allTopicPartitions);
@@ -102,7 +108,7 @@ public final class KafkaHighLevelConsumer {
    * @param partition     Topic partition
    * @param offset        Offset to seek from
    * @param count         Maximum number of records returned
-   * @param deserializers Key and Value deserialiser
+   * @param deserializers Key and Value deserializer
    * @return Latest records
    */
   synchronized List<ConsumerRecord<String, String>> getLatestRecords(TopicPartition partition, long offset, int count,
@@ -136,18 +142,8 @@ public final class KafkaHighLevelConsumer {
     return rawRecords
       .subList(0, Math.min(count, rawRecords.size()))
       .stream()
-      .map(rec -> new ConsumerRecord<>(rec.topic(),
-        rec.partition(),
-        rec.offset(),
-        rec.timestamp(),
-        rec.timestampType(),
-        rec.serializedKeySize(),
-        rec.serializedValueSize(),
-        deserialize(deserializers.getKeyDeserializer(), rec.key()),
-        deserialize(deserializers.getValueDeserializer(), rec.value()),
-        rec.headers(),
-        rec.leaderEpoch()))
-      .collect(Collectors.toList());
+      .map(rec -> createConsumerRecord(rec, deserializers))
+      .toList();
   }
 
   /**
@@ -161,11 +157,7 @@ public final class KafkaHighLevelConsumer {
                                                                      int count,
                                                                      Deserializers deserializers) {
     initializeClient();
-    final var partitionInfoSet = kafkaConsumer.partitionsFor(topic);
-    final var partitions = partitionInfoSet.stream()
-      .map(partitionInfo -> new TopicPartition(partitionInfo.topic(),
-        partitionInfo.partition()))
-      .collect(Collectors.toList());
+    final List<TopicPartition> partitions = determinePartitionsForTopic(topic);
     kafkaConsumer.assign(partitions);
     final var latestOffsets = kafkaConsumer.endOffsets(partitions);
 
@@ -196,19 +188,139 @@ public final class KafkaHighLevelConsumer {
       .values()
       .stream()
       .flatMap(Collection::stream)
-      .map(rec -> new ConsumerRecord<>(rec.topic(),
-        rec.partition(),
-        rec.offset(),
-        rec.timestamp(),
-        rec.timestampType(),
-        rec.serializedKeySize(),
-        rec.serializedValueSize(),
-        deserialize(deserializers.getKeyDeserializer(), rec.key()),
-        deserialize(deserializers.getValueDeserializer(), rec.value()),
-        rec.headers(),
-        rec.leaderEpoch()))
-      .collect(Collectors.toList());
+      .map(rec -> createConsumerRecord(rec, deserializers))
+      .toList();
   }
+
+  /**
+   * Searches records from all partitions of a given topic containing a given text.
+   *
+   * @param topic          The topic
+   * @param searchString   Searched text.
+   * @param maximumCount   The maximum number of results to return
+   * @param startTimestamp The message timestamp to search from
+   * @param deserializers  Key and Value deserializers
+   * @return A list of consumer records for a given topic.
+   */
+  synchronized SearchResults searchRecords(String topic,
+                                           String searchString,
+                                           Integer maximumCount,
+                                           Date startTimestamp,
+                                           Deserializers deserializers) {
+    initializeClient();
+    final List<TopicPartition> partitions = determinePartitionsForTopic(topic);
+    kafkaConsumer.assign(partitions);
+    seekToTimestamp(partitions, startTimestamp);
+
+    return searchRecords(searchString, maximumCount, deserializers);
+  }
+
+  private void seekToTimestamp(List<TopicPartition> partitions, Date startTimestamp) {
+    kafkaConsumer.offsetsForTimes(partitions.stream()
+        .collect(Collectors.toMap(tp -> tp, tp -> startTimestamp.getTime())))
+      .forEach(this::seekToOffset);
+  }
+
+  @NotNull
+  private SearchResults searchRecords(String searchString, Integer maximumCount, Deserializers deserializers) {
+    final List<ConsumerRecord<String, String>> foundRecords = new ArrayList<>();
+    boolean moreRecords;
+    var loweredSearchString = searchString.toLowerCase();
+    var scanStatus = new ScanStatus(Long.MAX_VALUE, 0);
+
+    do {
+      final var polled = kafkaConsumer.poll(Duration.ofMillis(SEARCH_POLL_TIMEOUT_MS));
+      scanStatus = searchPolledRecords(polled, deserializers, loweredSearchString, foundRecords, scanStatus);
+
+      moreRecords = !polled.isEmpty();
+    } while (foundRecords.size() < maximumCount
+      && moreRecords
+      && scanStatus.scannedCount() < SEARCH_MAX_MESSAGES_TO_SCAN);
+
+
+    CompletionReason completionReason;
+    if (!moreRecords) {
+      completionReason = CompletionReason.NO_MORE_MESSAGES_IN_TOPIC;
+    } else if (foundRecords.size() >= maximumCount) {
+      completionReason = CompletionReason.FOUND_REQUESTED_NUMBER_OF_RESULTS;
+    } else if (scanStatus.scannedCount() >= SEARCH_MAX_MESSAGES_TO_SCAN) {
+      completionReason = CompletionReason.EXCEEDED_MAX_SCAN_COUNT;
+    } else {
+      throw new IllegalStateException("This situation is unexpected");
+    }
+
+    return new SearchResults(foundRecords, completionReason, new Date(scanStatus.endingTimestamp()),
+      scanStatus.scannedCount());
+  }
+
+  private ScanStatus searchPolledRecords(ConsumerRecords<byte[], byte[]> polled, Deserializers deserializers,
+                                         String loweredSearchString,
+                                         List<ConsumerRecord<String, String>> foundRecords, ScanStatus scanStatus) {
+    for (var partition : polled.partitions()) {
+      scanStatus = searchPolledRecordsOfPartition(polled, partition, deserializers, loweredSearchString, foundRecords,
+        scanStatus);
+    }
+    return scanStatus;
+  }
+
+  private ScanStatus searchPolledRecordsOfPartition(ConsumerRecords<byte[], byte[]> polled,
+                                                    TopicPartition partition, Deserializers deserializers,
+                                                    String loweredSearchString,
+                                                    List<ConsumerRecord<String, String>> foundRecords,
+                                                    ScanStatus scanStatus) {
+    var records = polled.records(partition);
+    if (!records.isEmpty()) {
+
+      scanStatus = ScanStatus.createInstance(scanStatus, records.get(0).timestamp(), records.size());
+      // Add to found records if it matches the search criteria
+      foundRecords.addAll(records.stream()
+        .filter(rec ->
+          containsValue(deserializers.getKeyDeserializer(), rec.key(), loweredSearchString) ||
+            containsValue(deserializers.getValueDeserializer(), rec.value(), loweredSearchString))
+        .map(rec -> createConsumerRecord(rec, deserializers))
+        .toList());
+    }
+    return scanStatus;
+  }
+
+  private record ScanStatus(long endingTimestamp, int scannedCount) {
+    public static ScanStatus createInstance(ScanStatus previousScanStatus,
+                                            long firstTimestampOfBLock,
+                                            int sizeOfBlock) {
+      // Keep track of the lowest timestamp among this batch of records.
+      // This is what we will report to the user in the event that the search terminates
+      // early, so that they can perform a new search with this new timestamp as a starting point
+      return new ScanStatus((firstTimestampOfBLock < previousScanStatus.endingTimestamp) ?
+        firstTimestampOfBLock :
+        previousScanStatus.endingTimestamp(), previousScanStatus.scannedCount() + sizeOfBlock);
+    }
+  }
+
+  @NotNull
+  private List<TopicPartition> determinePartitionsForTopic(String topic) {
+    return kafkaConsumer.partitionsFor(topic).stream()
+      .map(partitionInfo -> new TopicPartition(partitionInfo.topic(), partitionInfo.partition()))
+      .toList();
+  }
+
+  private void seekToOffset(TopicPartition partition, OffsetAndTimestamp offset) {
+    // Old kafka message versions don't have timestamps so the offset would be null for that partition
+    kafkaConsumer.seek(partition, (offset == null) ? 0 : offset.offset());
+  }
+
+  @NotNull
+  private static ConsumerRecord<String, String> createConsumerRecord(ConsumerRecord<byte[], byte[]> rec,
+                                                                     Deserializers deserializers) {
+    return new ConsumerRecord<>(rec.topic(), rec.partition(), rec.offset(), rec.timestamp(), rec.timestampType(),
+      rec.serializedKeySize(), rec.serializedValueSize(), deserialize(deserializers.getKeyDeserializer(), rec.key()),
+      deserialize(deserializers.getValueDeserializer(), rec.value()), rec.headers(),
+      rec.leaderEpoch());
+  }
+
+  private boolean containsValue(MessageDeserializer deserializer, byte[] value, String loweredSearchString) {
+    return deserialize(deserializer, value).toLowerCase().contains(loweredSearchString);
+  }
+
 
   private static String deserialize(MessageDeserializer deserializer, byte[] bytes) {
     return bytes != null ? deserializer.deserializeMessage(ByteBuffer.wrap(bytes)) : "empty";
